--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto_EDD
 excludes=
+file.reference.gs-algo-2.0.jar=C:\\Users\\simon\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=C:\\Users\\simon\\Downloads\\gs-core-2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
