--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,16 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto_EDD
 excludes=
 file.reference.gs-algo-2.0.jar=C:\\Users\\simon\\Downloads\\gs-algo-2.0.jar
 file.reference.gs-core-2.0.jar=C:\\Users\\simon\\Downloads\\gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gs-algo-2.0.jar}:\
     ${file.reference.gs-core-2.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-ui-javafx-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
