--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.gs-algo-2.0.jar=C:\\Users\\simon\\Downloads\\gs-algo-2.0.jar
 file.reference.gs-core-2.0.jar=C:\\Users\\simon\\Downloads\\gs-core-2.0.jar
 file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-swing-2.0.jar
+file.reference.gson-2.11.0.jar=C:\\Users\\simon\\Downloads\\gson-2.11.0.jar
 file.reference.jackson-annotations-2.18.0.jar=C:\\Users\\simon\\Downloads\\jackson-annotations-2.18.0.jar
 file.reference.jackson-core-2.14.0.jar=C:\\Users\\simon\\Downloads\\jackson-core-2.14.0.jar
 file.reference.jackson-databind-2.18.0.jar=C:\\Users\\simon\\Downloads\\jackson-databind-2.18.0.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.gs-ui-javafx-2.0.jar}:\
     ${file.reference.jackson-core-2.14.0.jar}:\
     ${file.reference.jackson-databind-2.18.0.jar}:\
-    ${file.reference.jackson-annotations-2.18.0.jar}
+    ${file.reference.jackson-annotations-2.18.0.jar}:\
+    ${file.reference.gson-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
