--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto_EDD
-main.class=proyecto_edd.Main
+main.class=proyecto_edd.VMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
