--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto_EDD
 excludes=
 file.reference.gs-algo-2.0.jar=C:\\Users\\simon\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-core-2.0-sources.jar=C:\\Users\\simon\\Downloads\\gs-core-2.0-sources.jar
 file.reference.gs-core-2.0.jar=C:\\Users\\simon\\Downloads\\gs-core-2.0.jar
 file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=C:\\Users\\simon\\Downloads\\gs-ui-swing-2.0.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.jackson-core-2.14.0.jar}:\
     ${file.reference.jackson-databind-2.18.0.jar}:\
     ${file.reference.jackson-annotations-2.18.0.jar}:\
-    ${file.reference.gson-2.11.0.jar}
+    ${file.reference.gson-2.11.0.jar}:\
+    ${file.reference.gs-core-2.0-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
